WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146843
Crash at WebCore::WebPage::innerFrameQuad.
https://bugs.webkit.org/show_bug.cgi?id=146843
Summary
Crash at WebCore::WebPage::innerFrameQuad.
alan
Reported
2015-07-10 11:18:11 PDT
Crash at WebCore::WebPage::innerFrameQuad
Attachments
Patch
(10.68 KB, patch)
2015-07-10 11:28 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(10.72 KB, patch)
2015-07-10 12:24 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2015-07-10 11:18:45 PDT
rdar://problem/21501819
alan
Comment 2
2015-07-10 11:28:56 PDT
Created
attachment 256595
[details]
Patch
Andreas Kling
Comment 3
2015-07-10 11:36:36 PDT
Comment on
attachment 256595
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=256595&action=review
r=me
> Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:782 > + RenderObject* renderer = nullptr;
This should be a RenderElement*.
> Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:786 > + else if (assistedNode.rootEditableElement()) > + renderer = assistedNode.rootEditableElement()->renderer();
Can we avoid computing rootEditableElement() twice here?
alan
Comment 4
2015-07-10 12:24:31 PDT
Created
attachment 256601
[details]
Patch
WebKit Commit Bot
Comment 5
2015-07-10 13:20:59 PDT
Comment on
attachment 256601
[details]
Patch Clearing flags on attachment: 256601 Committed
r186684
: <
http://trac.webkit.org/changeset/186684
>
WebKit Commit Bot
Comment 6
2015-07-10 13:21:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug