Crash at WebCore::WebPage::innerFrameQuad. https://bugs.webkit.org/show_bug.cgi?id=146843 rdar://problem/21501819

Reviewed by Andreas Kling.

We may end up with a null rootEditableElement() after calling Document::updateLayout().

Speculative fix. Not reproducible.

Source/WebCore:

* page/Frame.cpp: Some const cleanup.
(WebCore::Frame::visiblePositionForPoint):
* page/Frame.h:

Source/WebKit2:

* WebProcess/WebPage/WebPage.h: Some const cleanup.
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::innerFrameQuad): null check assistedNode.rootEditableElement()
(WebKit::constrainPoint):
(WebKit::WebPage::selectWithGesture):
(WebKit::WebPage::visiblePositionInFocusedNodeForPoint):
(WebKit::WebPage::selectPositionAtPoint):
(WebKit::WebPage::selectPositionAtBoundaryWithDirection):
(WebKit::WebPage::selectTextWithGranularityAtPoint):
(WebKit::WebPage::updateSelectionWithExtentPoint):
(WebKit::WebPage::getPositionInformation):


Canonical link: https://commits.webkit.org/164921@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186684 268f45cc-cd09-0410-ab3c-d52691b4dbfc